# Project-A-V2

./: .env  .env.example  .gitignore  FINAL_VERIFICATION.md  OBSIDIAN_SETUP.md  README.md  VALIDATION_REPORT.md  VERIFICATION.md  download-model.sh  restart.sh  setup-obsidian.sh  setup.sh  start.sh  status.sh  stop.sh  validate.py
Project-A-extension/: Cargo.toml
Project-A-extension/src/: main.rs  models.rs  projections.rs  tests.rs
agent-service/: pyproject.toml  requirements.txt
agent-service/data/: context.db
agent-service/src/: main.py  parser.py  parser_config.py  query_engine.py
agent-service/src/agent_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent-service/tests/: test_integration.py  test_parser.py  test_query_engine.py
obsidian-sync/: projectors.py  renderers.py  repository.py  sync.py
telegram-bot/: pyproject.toml  requirements.txt
telegram-bot/src/: bot.py
tests/: test_human_scenarios.py
