[project]
name = "agent-service"
version = "0.1.0"
description = "LLM service for event-driven agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "llama-cpp-python>=0.2.0",
    "numpy>=1.24.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
