[project]
name = "agent-service"
version = "0.1.0"
description = "LLM service for event-driven agent"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.4",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
local-llm = [
    "llama-cpp-python>=0.2.90",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
