[project]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram interface for event-driven agent"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=20.8",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]
